tests/unknown_method_base/error.txt
Validation error: ./tests/unknown_method_base/unknown_method_base.fae:3
 No symbol `UnknownType` in the current scope
  3| method UnknownType
            ^^^^^^^^^^^
